--- a/project/index.html
+++ b/project/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Castle Quiz Battle</title>
+    <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -632,5 +633,12 @@
 
     <script src="database.js"></script>
     <script src="game.js"></script>
+    <script>
+    // Inicializar conexão Socket.IO
+    const socket = io();
+    
+    // Expor para os outros scripts
+    window.socket = socket;
+</script>
 </body>
 </html>
